Added base template(acts like header and footer) also updated the pages to using the base file

--- a/templates/cursus.html
+++ b/templates/cursus.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>cursus</title>
-</head>
-<body>
-<h1>cursus</h1>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <h1>cursus</h1>
+{% endblock content %}
