--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>register</title>
-</head>
-<body>
-<h1>register</h1>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <h1>register</h1>
+{% endblock content %}
