--- a/templates/test.html
+++ b/templates/test.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>test</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 <h1>TEST</h1>
-</body>
-</html>
+{% endblock content %}
