--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>login</h1>
+  <div class="container" style="width: 600px">
+    <form class="form-signin">
+        <h2 class="form-signin-heading">Please login</h2>
+        <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" /><br>
+        <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
+        <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me<br><br>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+    </form>
+  </div>
 {% endblock content %}
