--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1>MonkeyBusiness</h1>
+                {{ firstname }}
             </div>
         </div>
         <!-- /.row -->
