--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,10 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1>MonkeyBusiness</h1>
-                
-                {{ firstname }}
+
+                <p>name: {{ username }}</p>
+                <p>Last name: {{ password }}</p>
+                <p>email: {{ email }}</p>
             </div>
         </div>
         <!-- /.row -->
