Added login/register system, you can now login and register

--- a/templates/cursus.html
+++ b/templates/cursus.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>cursus</h1>
+    <div class="container-fluid">
+        <h1>cursus</h1>
+    </div>
+
 {% endblock content %}
