--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
     {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'testsix' %}">
+<form method="post" action="{% url 'login' %}">
 {% csrf_token %}
 <table>
 <tr>
