--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 
     {% load static %}
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+    <link href="{% static "css/main.css" %}" rel="stylesheet">
 
     <!-- Custom CSS -->
     <style>
