--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+    {% block content %}
 <h1>HOME</h1>
-</body>
-</html>
+<h1>{{ username }}</h1>
+
+{% endblock %}
