--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
     {% block content %}
 <h1>HOME</h1>
-<h1>{{ username }}</h1>
+<h1>{{ user.get_username }}</h1>
 
 {% endblock %}
