--- a/templates/test.html
+++ b/templates/test.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>TEST</h1>
+    {% for item in post %}
+        <p>{{ item }}</p>
+    {% endfor %}
+    <br>
+    <p>{{ post }}</p>
 {% endblock content %}
