--- a/templates/base.html
+++ b/templates/base.html
@@ -12,14 +12,7 @@
     {% load static %}
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "css/main.css" %}" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <style>
-    body {
-        padding-top: 70px;
-    }
-    </style>
-
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -29,54 +22,44 @@
 
 </head>
 
-<body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<body id="page-top">
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="/index/">MB</a>
+                <a class="navbar-brand page-scroll" href="/index/">Monkey Business</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="/about/">About</a>
+                        <a class="page-scroll" href="/cursus/">Cursus</a>
                     </li>
                     <li>
-                        <a href="/cursus/">Cursus</a>
+                        <a class="page-scroll" href="/index/#features">Languages</a>
                     </li>
-                   {% if not user.is_authenticated %}
-                        <li>
-                            <a href="/login/">Login</a>
-                        <li>
-                            <a href="/register/">Register</a>
-                        </li>
-                    {% endif %}
-                    {% if user.is_authenticated %}
-                        <li>
-                            <a href="/logout/">logout</a>
-                        </li>
-                    {% endif %}
                     <li>
-                        <a href="/test/">Test</a>
+                        <a class="page-scroll" href="/login/">Login</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/register/">Register</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/about/">About</a>
                     </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
+        <!-- /.container-fluid -->
     </nav>
     {% block content %}
 
     {% endblock %}
- <script src="{% static "js/JQuery.js" %}"></script>
+    <script src="{% static "js/JQuery.js" %}"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static "js/bootstrap.min.js" %}"></script>
