--- a/templates/login.html
+++ b/templates/login.html
@@ -1,35 +1,34 @@
 {% extends 'base.html' %}
 {% block content %}
+<section class="cta">
+    <div class="cta-content">
+        <div class="container">
+            {% if form.errors %}
+            <p>Your username and password didn't match. Please try again.</p>
+            {% endif %}
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+            {% if next %}
+                {% if user.is_authenticated %}
+                <p>Your account doesn't have access to this page. To proceed,
+                please login with an account that has access.</p>
+                {% else %}
+                <p>Please login to see this page.</p>
+                {% endif %}
+            {% endif %}
+            <div class="container" style="width: 600px">
+                <form method="post" class="form-signin" action="{% url 'login' %}">
+                    <h1 style="color: white" class="form-signin-heading">Login</h1>
+                    {% csrf_token %}
+                    {{ form.username }}
+                    <br>
+                    {{ form.password }}
+                    <br>
 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
-    {% endif %}
-{% endif %}
-
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
-
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
-
-
+                <input class="btn btn-lg btn-primary btn-block" type="submit" value="login" />
+                <input type="hidden" name="next" value="{{ next }}" />
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="overlay"></div>
 {% endblock %}
