--- a/templates/register.html
+++ b/templates/register.html
@@ -1,14 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="container" style="width: 600px">
-    <form class="form-signin" action="{% url "registerSubmit" %}" method="post">
-        {% csrf_token %}
-        <h2 class="form-signin-heading">Please Register</h2>
-        <input type="text" class="form-control" name="username" placeholder="username" required="" autofocus="" /><br>
-        <input type="text" class="form-control" name="email" placeholder="Email Address" required="" autofocus="" /><br>
-        <input type="password" class="form-control" name="password" placeholder="Password" required=""/><br>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
-
-    </form>
-  </div>
+    <section class="cta">
+    <div class="cta-content">
+        <div class="container">
+            <form class="form-signin" action="{% url "registerSubmit" %}" method="post">
+                {% csrf_token %}
+                <h1 class="form-signin-heading" style="color: white">Register</h1>
+                <input type="text" class="form-control" name="username" placeholder="Username" required="" autofocus="" /><br>
+                <input type="text" class="form-control" name="email" placeholder="Email Address" required="" autofocus="" /><br>
+                <input type="password" class="form-control" name="password" placeholder="Password" required=""/><br>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Let's Get Started!</button>
+            </form>
+        </div>
+    </div>
+    <div class="overlay"></div>
+</section>
 {% endblock content %}
