--- a/templates/base.html
+++ b/templates/base.html
@@ -63,5 +63,6 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static "js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/new-age.js" %}"></script>
 </body>
 </html>
