--- a/templates/editusers.html
+++ b/templates/editusers.html
@@ -1,24 +1,37 @@
 {% extends "base.html" %}
 {% block content %}
 {% if user.is_superuser %}
-    <div  style="padding-top:100px">
-    <form action="{% url "makestaff" %}" method="post">
-        {% csrf_token %}
-        <table class="table" style="width: 400px;">
-            {% for user in users %}
-                <tr>
-                    <td><a href="#">username: {{ user.get_username }}</a></td>
-                    <td>is moderator: {{ user.is_staff }}</td>
-                    <td>
-                         <input class="hBox" type="hidden" value="1" name="{{ user.get_username }}">
-                        <input  class="vBox" value="2" type="checkbox" name="{{ user.get_username }}" {% if user.is_staff %} checked {% endif %}>
-                    </td>
-                </tr>
-            {% endfor %}
-        </table>
-        <input class="btn btn-default" type="submit" value="Save changes">
-    </form>
-    </div>
+    <section id="download" class="download bg-primary text-center">
+            <div class="container">
+                <div class="row">
+                    <h1>Edit Users!</h1>
+                </div>
+            </div>
+        </section>
+        <section id="features" class="features">
+            <div class="container">
+                <div class="row">
+                    <center>
+                        <form action="{% url "makestaff" %}" method="post">
+                            {% csrf_token %}
+                            <table class="table" style="width: 400px;">
+                                {% for user in users %}
+                                    <tr>
+                                        <td><a href="#">username: {{ user.get_username }}</a></td>
+                                        <td>is moderator: {{ user.is_staff }}</td>
+                                        <td>
+                                            <input class="hBox" type="hidden" value="1" name="{{ user.get_username }}">
+                                            <input  class="vBox" value="2" type="checkbox" name="{{ user.get_username }}" {% if user.is_staff %} checked {% endif %}>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </table>
+                            <input class="btn btn-default" type="submit" value="Save changes">
+                        </form>
+                    </center>
+                </div>
+            </div>
+        </section>
     {% else %}
         <h1>No permission</h1>
     {% endif %}
