--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_superuser %}
+                    <li>
+                        <a class="page-scroll" href="/administrator/">Administration</a>
+                    </li>
+                    {% endif %}
                     <li>
                         <a class="page-scroll" href="/cursus/">Cursus</a>
                     </li>
@@ -53,6 +58,9 @@
                         <a class="page-scroll" href="/about/">About</a>
                     </li>
                     {% if user.is_authenticated %}
+                    <li>
+                        <a class="page-scroll" href="/home/">Home</a>
+                    </li>
                     <li>
                         <a class="page-scroll" href="/logout/">Logout</a>
                     </li>
