--- a/templates/cursus.html
+++ b/templates/cursus.html
@@ -1,7 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="container-fluid">
-        <h1>cursus</h1>
-    </div>
+    <section id="download" class="download bg-primary text-center">
+        <div class="container">
+            <div class="row">
+                <h1>Down here you can find all available courses!</h1>
+            </div>
+        </div>
+    </section>
 
+    <section id="features" class="features">
+        <div class="container">
+            <div class="row">
+                <center>
+                    <h1>Courses</h1>
+                </center>
+            </div>
+        </div>
+    </section>
 {% endblock content %}
