--- a/templates/editusers.html
+++ b/templates/editusers.html
@@ -14,7 +14,7 @@
                     <center>
                         <form action="{% url "makestaff" %}" method="post">
                             {% csrf_token %}
-                            <table class="table" style="width: 400px;">
+                            <table class="table table table-striped table-hover" style="width: 400px;">
                                 {% for user in users %}
                                     <tr>
                                         <td><a href="#">username: {{ user.get_username }}</a></td>
