--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-    <section id="download" class="download bg-primary text-center">
+    {% if user.is_authenticated %}
+        <section id="download" class="download bg-primary text-center">
             <div class="container">
                 <div class="row">
                     <h1>Home</h1>
@@ -16,5 +17,22 @@
                 </div>
             </div>
         </section>
-
+    {% else %}
+        <section id="download" class="download bg-primary text-center">
+            <div class="container">
+                <div class="row">
+                    <h1>Please Login</h1>
+                </div>
+            </div>
+        </section>
+        <section id="features" class="features">
+            <div class="container">
+                <div class="row">
+                    <center>
+                        <a href="/login/">Login here!</a>
+                    </center>
+                </div>
+            </div>
+        </section>
+    {% endif %}
 {% endblock %}
