--- a/templates/administrator.html
+++ b/templates/administrator.html
@@ -12,7 +12,7 @@
             <section id="features" class="features">
                 <div class="container">
                     <div class="row">
-                        <center>
+                        <div class="col-sm-6" style="margin-bottom: 20px">
                             <h1>Users</h1>
                             <table class="table table-striped table-hover" style="width: 500px;">
                                 {% for user in users %}
@@ -25,32 +25,31 @@
                                 {% endfor %}
                             </table>
                             <a href="/editusers/"><button type="button" class="btn btn-default">Edit users</button></a>
-                            <br>
-
-                            <h1>Courses</h1>
-                            <a href="/addcourse/"><button type="button" class="btn btn-default">Add a new course</button></a>
-                        </center>
+                        </div>
                     </div>
                 </div>
             </section>
-                    <section id="features" class="features">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                    </div>
-                    <div class="col-sm-6">
-                        <form class="form-signin" action="{% url "passwordSubmitAdmin" %}" method="post">
-                            {% csrf_token %}
-                            <p class="form-signin-heading">Change password</p>
-                            <input type="text" class="form-control" name="username" placeholder="Username" required="" autofocus="" /><br>
-                            <input type="password" class="form-control" name="passwordI" placeholder="Password" required="" autofocus="" /><br>
-                            <input type="password" class="form-control" name="passwordII" placeholder="Password" required=""/><br>
-                            <button class="btn btn-lg btn-primary btn-block" type="submit">Change password</button>
-                        </form>
+            <section id="features" class="features">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-6" style="margin-bottom: 20px">
+                            <h1>Courses</h1>
+                            <a href="/addcourse/"><button type="button" class="btn btn-default">Add a new course</button></a>
+                            <br>
+                        </div>
+                        <div class="col-sm-6">
+                            <form class="form-signin" action="{% url "passwordSubmitAdmin" %}" method="post">
+                                {% csrf_token %}
+                                <p class="form-signin-heading">Change password</p>
+                                <input type="text" class="form-control" name="username" placeholder="Username" required="" autofocus="" /><br>
+                                <input type="password" class="form-control" name="passwordI" placeholder="Password" required="" autofocus="" /><br>
+                                <input type="password" class="form-control" name="passwordII" placeholder="Password" required=""/><br>
+                                <button class="btn btn-lg btn-primary btn-block" type="submit">Change password</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
         {% else %}
             <h1>No  permission</h1>
         {% endif %}
