--- a/templates/base.html
+++ b/templates/base.html
@@ -79,5 +79,6 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static "js/bootstrap.min.js" %}"></script>
     <script src="{% static "js/script.js" %}"></script>
+    <script src="{% static "js/new-age.js" %}"></script>
 </body>
 </html>
