--- a/MonkeyBusiness/static/css/main.css
+++ b/MonkeyBusiness/static/css/main.css
@@ -297,8 +297,8 @@ section.cta {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/bg-cta.jpg');
-  padding: 250px 0;
+  background-image: url('../img/harambe.jpg');
+  padding: 364px 0;
 }
 section.cta .cta-content {
   position: relative;
