Heb je het al gecommit?

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,9 @@
                     </li>
                     {% if user.is_authenticated %}
                     <li>
+                        <a class="page-scroll" href="/purchases/">purchases</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="/home/">Home</a>
                     </li>
                     <li>
