--- a/templates/purchases.html
+++ b/templates/purchases.html
@@ -11,17 +11,17 @@
     <section id="features" class="features">
         <div class="container">
             <div class="row">
-                <center>
+                <div class="col-lg-6 col-lg-offset-3">
                     {% for purchase in purchases %}
                         <form action="{% url "pdf" %}" method="post">
                             {% csrf_token %}
-                            <input type="hidden" value="{{ purchase.2 }}" name="lang">
-                            <input type="hidden" value="{{ purchase.3 }}" name="price">
-                            <p>{{ purchase.2 }}: not paid!</p>
+                            <input type="hidden" value="{{ purchase.1 }}" name="lang">
+                            <input type="hidden" value="{{ purchase.2 }}" name="price">
+                            <p>{{ purchase.1 }}: not paid!</p>
                             <input type="submit" class="btn btn-default" value="get pdf">
                         </form><br>
                     {% endfor %}
-                </center>
+                </div>
             </div>
         </div>
     </section>
