--- a/templates/administrator.html
+++ b/templates/administrator.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
     {% block content %}
-        {% if user.is_superuser %}
+        {% if user.is_staff %}
             <section id="download" class="download bg-primary text-center">
                 <div class="container">
                     <div class="row">
@@ -12,6 +12,7 @@
             <section id="features" class="features">
                 <div class="container">
                     <div class="row">
+                        {% if user.is_superuser %}
                         <div class="col-sm-6" style="margin-bottom: 20px">
                             <h1>Users</h1>
                             <table class="table table-striped table-hover" style="width: 500px;">
@@ -26,6 +27,7 @@
                             </table>
                             <a href="/editusers/"><button type="button" class="btn btn-default">Edit users</button></a>
                         </div>
+                        {% endif %}
                     <div class="col-lg-6">
                     <h2>Invoices</h2>
                     <br>
@@ -46,6 +48,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6" style="margin-bottom: 20px">
+                        {% if user.is_superuser %}
                             <h1>Courses</h1>
                             <a href="/addcourse/"><button type="button" class="btn btn-default">Add a new course</button></a>
                             <br>
@@ -60,6 +63,7 @@
                                 <button class="btn btn-lg btn-primary btn-block" type="submit">Change password</button>
                             </form>
                         </div>
+                        {% endif %}
                     </div>
                 </div>
             </section>
