--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    {% if user.is_superuser %}
+                    {% if user.is_staff %}
                     <li>
                         <a class="page-scroll" href="/administrator/">Administration</a>
                     </li>
