Applied styling and some harambe level content to the about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>about</h1>
+    <section id="download" class="download bg-primary text-center">
+        <div class="container">
+            <div class="row">
+                <h1>About us!</h1>
+            </div>
+        </div>
+    </section>
+
+    <section id="features" class="features">
+        <div class="container">
+            <div class="row">
+                <center>
+                    <p>we here at monkey business</p>
+                    <br>
+                    <img id="harambe" src="../static/img/harambe.jpg" style="height: 250px; width: 400px;">
+                    <p>We provice high quality language courses taught by top men</p>
+
+                </center>
+            </div>
+        </div>
+    </section>
 {% endblock content %}
